--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
   },
   "dependencies": {
     "framer-motion": "^12.4.3",
-    "google-auth-library": "^9.15.1",
-    "googleapis": "^144.0.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
