--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "ulid": "^2.3.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
